# barber-shop-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  seed.py
alembic/: env.py
app/: config.py  exceptions.py  main.py  models.py
app/routers/: appointments.py  barbers.py  reviews.py
app/schemas/: appointment.py  barber.py  review.py
app/services/: booking.py  customers.py  phone.py  reminders.py  sms.py
scripts/: localserver.sh
