[project]
name = "barber-shop"
version = "0.1.0"
description = "Barber shop booking system POC"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "twilio>=9.0.0",
    "apscheduler>=3.10.4",
    "python-dateutil>=2.9.0",
    "phonenumbers>=8.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "poethepoet>=0.29.0",
]

[tool.poe.tasks]
services-up = "docker compose up --always-recreate-deps -d --wait"
services-down = "docker compose down"
services-down-v = "docker compose down -v"
runserver = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
localserver = "bash scripts/localserver.sh"
localtests = "pytest tests/ -v"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
